# settlements

./: .gitignore  CMakeLists.txt  adddialog.cpp  adddialog.h  adddialog.ui  cities.db3  city.cpp  city.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  populationfilter.cpp  populationfilter.h  type.h
db/: citiesrepository.cpp  citiesrepository.h
dialog/: adddialog.cpp  adddialog.h  adddialog.ui  editdialog.cpp  editdialog.h
entity/: city.cpp  city.h
linux-build/: build.sh  settlements-editor.deb
linux-build/release/DEBIAN/: control
model/: citiestablemodel.cpp  citiestablemodel.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
src/db/: citiesrepository.cpp  citiesrepository.h
src/dialog/: editdialog.cpp  editdialog.h  editdialog.ui
src/entity/: type.cpp
src/model/: citiestablemodel.h
win-build/: 5.11.3-0-201811291905qttranslations-Windows-Windows_10-MSVC2017-Windows-Windows_10-X86_64.7z  build.ps1  create-installer.ps1  settlements-installer.wxs
win-build/release/: cities.db3
